stealth (3.00.00)

  * Version 3.00.00 completely reorganizes and refactors Stealth's
    components. Long functions were split into shorter ones and several new
    classes were defined, resulting in better compartmentalization of
    tasks. 

  * At the program's logical flow level continuation and related flow control
    was re-implemented, using, e.g., Bobcat's FBB::Signal class to handle
    signals. Also, wait facilities based on sleep(3) selector(3bobcat) were
    replaced by C++11 facilities using mutexes and condition variables.

  * Stealth's cross-refeence information is added to the source archive,
    installed by default in EXTRA/stealth.xref.gz (cf. INSTALL.im for the
    actual EXTRA location.

  * The manual and man-pages received a complete overhaul.

  * See the manual's `What's new' section for an overview of changes that are
    immediatly relevant at the user-level. E.g., the option --keep-alive is no
    longer supported.

  * The manual's .pdf version now offers clickable hyperlinks.

  * Several README.* files were added. In particular: README.3.00.00 summarizes
    the changes from stealth 2.12.00 to stealth 3.00.00

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 29 Aug 2014 12:52:15 +0200

stealth (2.12.00)

  * Fixed a bug preventing stealth runs to end when a command returns a
    non-zero exit value

  * Replaced obsolete Errno calls by Exception calls




stealth (2.11.04)

  * Fixed a compilation error with clang, reported by Nicolas
    Sevelin-Radiguet. 

  * Removed superfluous patch-files 01_include_errno.patch and 
    clang_FTBFS_ambiguous-declaration.patch

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 24 Apr 2014 16:20:24 +0200

stealth (2.11.03)

  * In Stealth's man-page and manual -perm -xxxx was replaced by -perm /xxxx,
    as per the POSIX standard.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 Jun 2013 14:34:42 +0200

stealth (2.11.02)

  * Stealth returns 0 for options --help and --version
