@@ -1,3 +1,3 @@
 #define AUTHOR  "Frank B. Brokken (f.b.brokken@rug.nl)";
-#define VERSION "3.00.00"
-#define YEARS   "2005-2014"
+#define VERSION "3.01.00"
+#define YEARS   "2005-2015"
