@@ -1,7 +1,7 @@
 #include "stealth.ih"
 
-void Stealth::acceptMode(Mode mode)
+string Stealth::acceptMode(Mode mode)
 {
     d_run.setMode(mode);
-    d_ipc.sendRequestor("OK");
+    return "";
 }
