@@ -1,6 +1,6 @@
 #include "stealth.ih"
 
-void Stealth::deniedMode(char const *request)
+std::string Stealth::deniedMode(char const *request)
 {
     ostringstream ostr;
 
@@ -8,7 +8,7 @@ void Stealth::deniedMode(char const *request)
                 d_run.modeName() << " cannot do " << request;
 
 
-    d_ipc.sendRequestor(ostr.str());
-
     m2 << "ignored --rerun in mode " << d_run.modeName() << endl;
+
+    return ostr.str();
 }
