@@ -1,11 +1,12 @@
 #include "stealth.ih"
 
-void Stealth::reloadRequest()
+string Stealth::reloadRequest()
 {
-    if (d_run.mode(INTEGRITY_SCAN | WAIT | SUSPEND))
-        acceptMode(RELOAD);
-    else
-        deniedMode("--reload");
+    string ret =  d_run.mode(INTEGRITY_SCAN | WAIT | SUSPEND)
+                        acceptMode(RELOAD)
+                    :
+                        deniedMode("--reload");
+    return ret;
 }
 
 
