@@ -3,6 +3,8 @@
 Stealth::Stealth()
 :
     d_options(Options::instance())          // determine all options / runmode
+    d_chore(0),
+    d_communicate(0)
 {
     d_run.setMode(d_options.mode());
 }
